<resources>
    <string name="app_name">Plants Recognizer</string>
    <string name="about_text">About Page</string>
    <string name="about_title">About Title</string>
    <string name="how_to_use_text">How To Use Text</string>
    <string name="how_to_use_title">How To Use Title</string>
    <string name="all_question_title">All Questions</string>
    <string name="all_question_text">All Question Text</string>
    <string name="recommended_question_title">Recommended Question Title</string>
    <string name="recommended_question_text">Recommended Question text</string>
    <string name="catalogue_title">Catalogue</string>
    <string name="catalogue_text">Catalogue Text</string>
    <string name="catalogue_button">Catalogue</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_button_text">Settings</string>

    <string name="update_button">Update Button</string>

    <string name="webview_title">WebView</string>

    <string name="welcome">Theme Example</string>

    <string name="default_gallery">A</string>
    <string name="gallery_summary">Choose Gallery</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="key_gallery_name">key_gallery_name</string>

    <string name="pref_header_about">About</string>
    <string name="app_version">3.5</string>
    <string name="title_version">Version</string>
    <string name="all_question_button">All Questions</string>

    <string name="search_hint">Search</string>
    <string name="description">Description</string>
    <string name="def_swipe_theme">Default</string>
    <string name="swipe_theme_dialog_title">SwipeTheme</string>

    <!-- Strings used in Preference Activity -->
    <string name="OK">OK</string>
    <string name="def_theme">Default</string>
    <string name="theme_summary">Appearance</string>
    <string name="swipe_theme_summary">Appearance</string>
    <string name="theme_dialog_title">AppTheme</string>
    <string name="settings">Settings</string>

</resources>
